// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context Consumer renders within provider and inherits the defined value 1`] = `
<Provider theme="dark">
  <div>
    <Consumer spy={mockConstructor()}>
      <div>Consumed!</div>
    </Consumer>
  </div>
</Provider>
`;

exports[`Context Provider renders a provider without consumer, and its children 1`] = `<Provider>Child</Provider>`;

exports[`Context contextType renders within provider and inherits the defined value 1`] = `
<Provider theme="dark">
  <div>
    <StaticConsumer spy={mockConstructor()}>
      <div>Consumed!</div>
    </StaticConsumer>
  </div>
</Provider>
`;

exports[`Context legacy renders within parent and inherits the defined value 1`] = `
<ParentContext theme="dark">
  <div>
    <ChildContext spy={mockConstructor()}>
      <div>Consumed!</div>
    </ChildContext>
  </div>
</ParentContext>
`;

exports[`Context useContext renders within provider and inherits the defined value 1`] = `
<Provider theme="dark">
  <div>
    <HookConsumer spy={mockConstructor()}>
      <div>Consumed!</div>
    </HookConsumer>
  </div>
</Provider>
`;
